added user links to application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+  <header>
+    <%= link_to "Home", root_path %>
+    <%= render "layouts/user_links" %>
+  </header>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
