--- a/app/views/layouts/_user_links.erb
+++ b/app/views/layouts/_user_links.erb
@@ -3,5 +3,5 @@
   <%= link_to "Edit profile", edit_user_registration_path %>
 <% else %>
   <%= link_to "Sign in", new_user_session_path %>
-  <%= link_to "Register", new_user_registration_path %>
+  <%= link_to "Sign up", new_user_registration_path %>
 <% end %>
