added contacts and conversation links to application layout

--- a/app/views/layouts/_user_links.erb
+++ b/app/views/layouts/_user_links.erb
@@ -1,6 +1,8 @@
 <% if user_signed_in? %>
   <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
   <%= link_to "Edit profile", edit_user_registration_path %>
+  <%= link_to "Contacts", contacts_path %>
+  <%= link_to "Conversations", conversations_path %>
 <% else %>
   <%= link_to "Sign in", new_user_session_path %>
   <%= link_to "Sign up", new_user_registration_path %>
