--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-  <header>
+  <nav>
     <%= link_to "Home", root_path %>
     <%= render "layouts/user_links" %>
-  </header>
+  </nav>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
