--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,12 +1,12 @@
 %h2="Edit"+resource_name.to_s.humanize
 
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
 
   %div
     = f.label :email
     %br/
-    = f.email_field :email, :autofocus => true
+    = f.email_field :email, autofocus: true
 
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %div="Currently waiting confirmation for: "+resource.unconfirmed_email
@@ -25,7 +25,7 @@
     = f.label :password
     %i (leave blank if you don't want to change)
     %br/
-    = f.password_field :password, :autocomplete => "off"
+    = f.password_field :password, autocomplete: "off"
 
   %div
     = f.label :password_confirmation
@@ -45,6 +45,6 @@
 
 %p
   Unhappy?
-  = button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete
+  = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
 
 = link_to "Back", :back
