--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,3 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+.hero-unit
+  %h1 Leucurus
+  %p Robust relationship management for community organizers working in teams.
