--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,17 +3,16 @@
 
   %head
     %title Leucurus
+    = csrf_meta_tags
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
-    = csrf_meta_tags
 
   %body
 
-    %nav
-      = link_to "Home", root_path
-      = render "layouts/user_links"
+    .container
+      .header
+        %h3{class: "muted"}
+          = Leucurus
 
-    %p.notice= notice
-    %p.alert= alert
-
-    = yield
+      = yield
