more smoke test stuff

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,29 @@
 .hero-unit
   %h1 Leucurus
-  %p Robust relationship management for community organizers working in teams.
+  %p Relationship management for community organizers.
+
+  %a{class: "btn btn-primary btn-large"} Learn more
+
+.row-fluid
+  .span4
+    %h4 Build Relationships
+    %p
+      Community organizers need help building relationships around shared
+      values.  Leucurus helps you build strong relationships by helping keeping
+      track of and understanding how a relationship has progressed and what the
+      next steps are.
+
+  .span4
+    %h4 Mobilize Relationships
+    %p
+      Community organizers need help mobilizing relationships into action.
+      Leucurus helps you keep track of what needs to get done, who is doing
+      what, and what skills, assets, and interests your team has.
+
+  .span4
+    %h4 Share Relationships
+    %p
+      Community organizers need help sharing rich information about
+      relationships with others.  Leucurus helps you share and pass off strong
+      relationships with ease by providing robust privacy and sharing controls
+      along with rich data.
