changed markup to bootstrap 3

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,11 @@
-.hero-unit
+.jumbotron
   %h1 Leucurus
   %p Relationship management for community organizers.
 
-  %a{class: "btn btn-primary btn-large"} Learn more
+  %button{class: "btn btn-lg btn-success"} Learn more
 
-.row-fluid
-  .span4
+.row
+  .col-md-4
     %h4 Build Relationships
     %p
       Community organizers need help building relationships around shared
@@ -13,14 +13,14 @@
       track of and understanding how a relationship has progressed and what the
       next steps are.
 
-  .span4
+  .col-md-4
     %h4 Mobilize Relationships
     %p
       Community organizers need help mobilizing relationships into action.
       Leucurus helps you keep track of what needs to get done, who is doing
       what, and what skills, assets, and interests your team has.
 
-  .span4
+  .col-md-4
     %h4 Share Relationships
     %p
       Community organizers need help sharing rich information about
