--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
 
     .container
       %nav
-        %h3{class: "muted"} Leucurus
+        %h3{class: "text-muted"} Leucurus
 
       %hr/
 
@@ -21,4 +21,4 @@
       %hr/
 
       %footer
-        %p{class: "muted"} © 2013 Leucurus Labs
+        %p{class: "text-muted"} © 2013 Leucurus Labs
