--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,22 +8,21 @@
   .col-md-4
     %h4 Build Relationships
     %p
-      Community organizers need help building relationships around shared
-      values.  Leucurus helps you build strong relationships by helping keeping
-      track of and understanding how a relationship has progressed and what the
-      next steps are.
+      Community organizers need to build relationships around shared values.
+      Leucurus helps you build strong relationships by keeping track of how a
+      relationship has progressed and what the next steps are.
 
   .col-md-4
     %h4 Mobilize Relationships
     %p
-      Community organizers need help mobilizing relationships into action.
+      Community organizers need to mobilize relationships into action.
       Leucurus helps you keep track of what needs to get done, who is doing
       what, and what skills, assets, and interests your team has.
 
   .col-md-4
     %h4 Share Relationships
     %p
-      Community organizers need help sharing rich information about
-      relationships with others.  Leucurus helps you share and pass off strong
-      relationships with ease by providing robust privacy and sharing controls
-      along with rich data.
+      Community organizers need to share rich information about relationships
+      with others.  Leucurus helps you share and pass off strong relationships
+      with ease by providing robust privacy and sharing controls along with
+      rich data.
