basic controllers and views for creating sign_ups

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
   %h1 Leucurus
   %p Relationship management for community organizers.
 
-  %button{class: "btn btn-lg btn-success"} Learn more
+  = link_to "Learn more", new_sign_up_path, class: "btn btn-lg btn-success"
 
 .row
   .col-md-4
