made all forms work for form-horizontal, but submit button must still be wrapped manually

--- a/app/views/sign_ups/_form.haml
+++ b/app/views/sign_ups/_form.haml
@@ -3,4 +3,6 @@
   = f.input :build
   = f.input :mobilize
   = f.input :share
-  = f.button :submit
+  .form-group
+    .col-md-offset-3.col-md-9
+      = f.button :submit
