--- a/app/views/sign_ups/_form.haml
+++ b/app/views/sign_ups/_form.haml
@@ -5,4 +5,4 @@
   = f.input :share
   .form-group
     .col-md-offset-3.col-md-9
-      = f.button :submit
+      = f.button :submit, 'Keep me posted!'
