--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -1,7 +1,16 @@
 %nav
   %ul.nav.nav-pills.pull-right
-    %li{class: (params[:controller] == 'sign_ups' ? 'active' : nil)}= link_to "Learn more", new_sign_up_path
     %li= link_to "Home", root_path
+
+    - if user_signed_in?
+      %li{class: (params[:controller] == 'contacts' ? 'active' : nil)}= link_to "Contacts", contacts_path
+      %li{class: (params[:controller] == 'conversations' ? 'active' : nil)}= link_to "Conversations", conversations_path
+      %li= link_to "Edit profile", edit_user_registration_path
+      %li= link_to "Sign out", destroy_user_session_path, method: :delete
+    - else
+      %li= link_to "Sign in", new_user_session_path
+      %li= link_to "Sign up", new_user_registration_path
+
   %h3.text-muted Leucurus
 
 %br/
