rebranded from Leucurus to Relate

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 .jumbotron
-  %h1 Leucurus
+  %h1 Relate
   %p Relationship management for community organizers.
 
   = link_to "Learn more", new_sign_up_path, class: "btn btn-lg btn-success"
@@ -9,20 +9,20 @@
     %h4 Build Relationships
     %p
       Community organizers need to build relationships around shared values.
-      Leucurus helps you build strong relationships by keeping track of how a
+      Relate helps you build strong relationships by keeping track of how a
       relationship has progressed and what the next steps are.
 
   .col-md-4
     %h4 Mobilize Relationships
     %p
       Community organizers need to mobilize relationships into action.
-      Leucurus helps you keep track of what needs to get done, who is doing
+      Relate helps you keep track of what needs to get done, who is doing
       what, and what skills, assets, and interests your team has.
 
   .col-md-4
     %h4 Share Relationships
     %p
       Community organizers need to share rich information about relationships
-      with others.  Leucurus helps you share and pass off strong relationships
+      with others.  Relate helps you share and pass off strong relationships
       with ease by providing robust privacy and sharing controls along with
       rich data.
