--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
 
   %head
-    %title Leucurus
+    %title Relate
     = csrf_meta_tags
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
@@ -20,4 +20,4 @@
       %hr/
 
       %footer
-        %p{class: "text-muted"} © 2013 Leucurus Labs
+        %p{class: "text-muted"} © 2013 Relate
