--- a/app/views/sign_ups/_form.haml
+++ b/app/views/sign_ups/_form.haml
@@ -3,7 +3,7 @@
   .col-md-offset-3.col-md-9
     %p
       In our experience, community organizers need to build relationships
-      around shared values.  We think that if Leucurus can help you build
+      around shared values.  We think that if Relate can help you build
       strong relationships by keeping track of how a relationship has
       progressed and what the next steps are, that would make you a better
       organizer.  Do you agree?
@@ -26,7 +26,7 @@
   .col-md-offset-3.col-md-9
     %p
       We also think that community organizers need to mobilize relationships
-      into action. Hopefully, Leucurus could help you keep track of what needs
+      into action. Hopefully, Relate could help you keep track of what needs
       to get done, who is doing what, and what skills, assets, and interests
       your team has.  Do you think that would that be helpful?
     .form-group{class: (@sign_up.errors[:mobilize].empty? ? nil : 'has-error')}
@@ -48,7 +48,7 @@
   .col-md-offset-3.col-md-9
     %p
       Last, we've found that we need to share rich information about
-      relationships with others. We're going to make sure Leucurus helps you
+      relationships with others. We're going to make sure Relate helps you
       share and pass off strong relationships with ease by providing robust
       privacy and sharing controls along with rich data.  Is that important to
       you?
