changed Participant#contact_name to Participant#name

--- a/app/views/participants/show.html.haml
+++ b/app/views/participants/show.html.haml
@@ -1,6 +1,6 @@
 %p
   %strong Name:
-  = @participant.contact_name
+  = @participant.name
 %p
   %strong Conversation:
   = @participant.conversation
