--- a/app/views/contacts/edit.html.haml
+++ b/app/views/contacts/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing contact
+%h1= link_to @contact.name, @contact
 
 = render 'form'
-
-= link_to 'Show', @contact
-|
-= link_to 'Back', contacts_path
