change 'Destroy' links to 'Delete'

--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -13,4 +13,4 @@
         %td.actions
           = link_to 'Edit', edit_contact_path(contact)
           |
-          = link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' }
+          = link_to 'Delete', contact, method: :delete, data: { confirm: 'Are you sure?' }
