--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,9 @@
 %p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password. You can do this through the link below.
+  Hello #{@resource.username}!
+%p Someone has requested instructions for a forgotten username or password. Your username is:
+%p= @resource.username
+%p You can reset your password through the link below.
 %p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-%p If you didn't request this, please ignore this email.
-%p Your password won't change until you access the link above and create a new one.
+%p
+  If you didn't request this, please ignore this email.
+  Your password won't change until you access the link above and create a new one.
