--- a/app/views/contacts/show.html.haml
+++ b/app/views/contacts/show.html.haml
@@ -15,7 +15,7 @@
       %tr
         %td.date= conversation.date
         %td= truncate(conversation.contacts.map(&:name).join(", "), length: truncate_length)
-        %td= link_to truncate(conversation.notes, length: truncate_length), conversation
+        %td= link_to truncate(conversation.description, length: truncate_length), conversation
         %td.actions
           = link_to 'Edit', edit_conversation_path(conversation)
           |
