--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,16 +1,3 @@
 .pull-right= link_to 'New Contact', new_contact_path, class: 'btn btn-success'
 
-%table.table.table-hover
-  %thead
-    %tr
-      %th Contacts
-      %th
-
-  %tbody
-    - @contacts.each do |contact|
-      %tr
-        %td= link_to contact.name, contact
-        %td.actions
-          = link_to 'Edit', edit_contact_path(contact)
-          |
-          = link_to 'Delete', contact, method: :delete, data: { confirm: 'Are you sure?' }
+= render 'table'
