--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -5,6 +5,7 @@
     - if user_signed_in?
       %li{class: (['contacts'].include?(params[:controller]) ? 'active' : nil)}= link_to "Contacts", contacts_path
       %li{class: (['conversations', 'participants'].include?(params[:controller]) ? 'active' : nil)}= link_to "Conversations", conversations_path
+      %li{class: (['tags'].include?(params[:controller]) ? 'active' : nil)}= link_to "Tags", tags_path
       %li= link_to "Edit profile", edit_user_registration_path
       %li= link_to "Sign out", destroy_user_session_path, method: :delete
     - else
