--- a/app/views/participants/_form.haml
+++ b/app/views/participants/_form.haml
@@ -1,3 +1,3 @@
 = simple_form_for([@conversation, @participant]) do |f|
-  = f.association :contact, collection: @contacts, label_method: :name
+  = f.association :contact, collection: @contacts, label_method: :name, autofocus: true
   = f.button :submit
