--- a/app/views/tags/_form.haml
+++ b/app/views/tags/_form.haml
@@ -1,3 +1,3 @@
 = simple_form_for(@tag) do |f|
-  = f.input :name, required: true, autofocus: true
+  = f.input :name, autofocus: true
   = f.button :submit
