--- a/app/views/contacts/_form.haml
+++ b/app/views/contacts/_form.haml
@@ -1,3 +1,4 @@
 = simple_form_for(@contact) do |f|
   = f.input :name, autofocus: true
+  = f.input :notes, :input_html => { :rows => 14 }
   = f.button :submit
