--- a/app/views/memberships/_table.haml
+++ b/app/views/memberships/_table.haml
@@ -2,8 +2,11 @@
   %thead
     %tr
       %th Users
+      %th
 
   %tbody
     - @memberships.each do |membership|
       %tr
         %td= membership.user_username
+        %td.actions
+          = link_to (membership.user == current_user ? 'Leave' : 'Remove'), [@organization, membership], method: :delete, data: { confirm: 'Are you sure?' }
